--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
 <body>
 	<div class="container mt-5">
 		<h1 class="text-center mb-5">GST Checker</h1>
-		<form method="POST" action="/" class="text-center">
+		<form method="POST" action="/process_image" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="gst_image">Upload an Image containing GST Number:</label>
-				<input type="file" id="gst_image" name="gst_image" accept="image/*" required>
+				<input type="file" name="image" accept="image/*" required>
 			</div>
 			<button type="submit" class="btn btn-primary mt-3">Check GST</button>
 		</form>
